--- a/content/Copsim.html
+++ b/content/Copsim.html
@@ -139,61 +139,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='IPv6.html'>Next</a> >> IPv6<br /><h1>About</h1>
-<p>倉儲: <a href="https://github.com/mdecycu/cd2022_guide">https://github.com/mdecycu/cd2022_guide</a></p>
-<p>網站: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
-<h4>課程倉儲與網站:</h4>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cd2022">https://github.com/mdecycu/cd2022</a></p>
-<p style="padding-left: 30px;"><a href="https://mde.tw/cd2022">https://mde.tw/cd2022</a></p>
-<h4>網路設定:</h4>
-<p style="padding-left: 30px;">由於目前電腦輔助設計室中的電腦只要將網路連接到系上的主幹 (因為課程要全面在純 IPv6 網段上運作), 直接連外, 電腦中就會有蠕蟲程式啟動攻擊(Why?, 如何找到攻擊源頭?), 造成操作系統所安裝的防毒軟體為了防堵惡意攻擊而關閉網路連線.</p>
-<p style="padding-left: 30px;">為因應上述問題, 可以在切換至連外網段後, 將系統的代理主機自動偵測關閉, 且自行設定能夠支援 IPv6 與 IPv4 的代理主機, 並且關閉網路卡的 IPv4 網路協定, 就可以避開惡意軟體的攻擊.</p>
-<p style="padding-left: 30px;">若要在開機後, 防毒軟體啟動前, 以批次檔案的執行, 自動完成上述三項設定, 可以參考:</p>
-<p style="padding-left: 60px;">電腦輔助設計室 <a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a></p>
-<h4>分組:</h4>
-<p style="padding-left: 30px;">利用 Ethercalc 收集各班學員的 Github 帳號與組別, 存入 <a href="https://github.com/mdecycu/studlist/tree/main/2022spring">https://github.com/mdecycu/studlist/tree/main/2022spring</a></p>
-<p style="padding-left: 30px;">各學員若 github 帳號有更動, 可以自行至 <a href="https://github.com/mdecycu/studlist">https://github.com/mdecycu/studlist</a>  倉儲, 以 pull requests 進行修改.</p>
-<p style="padding-left: 30px;">以 2b 為例, 每一大組 8 人, 且分為兩個 4 人小組, 目前可以透過 <a href="http://mde.tw/studlist/2022spring/2b.txt">http://mde.tw/studlist/2022spring/2b.txt</a> 讀取. 且透過 <a href="./../downloads/read_data_from_nfulist.py">read_data_from_nfulist.py</a> 可以在近端讀取各班學員的 github 帳號與組別.</p>
-<p style="padding-left: 30px;">目前碰到的問題是:</p>
-<p style="padding-left: 60px;">能不能透過隨機方式自動幫尚未納組的學員分組?</p>
-<p style="padding-left: 60px;">能不能直接在網站上顯示出各學員的 cd2022 課程倉儲與網站?</p>
-<p style="padding-left: 90px;">參考: <a href="https://mde.tw/cd2022_guide/content/run.html?src=https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/47ba006b45b227bc1135542f91adcc025f3f2590/grp_2022.py">grp_2022</a>, <a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/0999a227153ea9a20954e4b2b77f783337197627/w4_grp_src.py&amp;src2=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/0999a227153ea9a20954e4b2b77f783337197627/w4_grp_src2.py">2a 分組程式練習</a>, <a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/507db6ddb7b5bcdd3027235761208b32ac93bcd0/w4_b_grp.py&amp;src2=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/507db6ddb7b5bcdd3027235761208b32ac93bcd0/w4_b_grp_src2.py">2b 分組程式練習</a></p>
-<h4>下載課程工具:</h4>
-<p style="padding-left: 30px;">協同產品設計實習課程將會用到 NX1980, 若在電腦輔助設計室, 可以直接從 <a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88/</a> 下載.</p>
-<p style="padding-left: 30px;">NX12 版 (2017.10) 之後的版號:</p>
-<p style="padding-left: 60px;">2019.01: NX1847 開始啟動 Continuous Release</p>
-<p style="padding-left: 60px;">2019.06: NX1872 啟動每半年釋出一個累加 27 的 Series 版次號.</p>
-<p style="padding-left: 60px;">2019.12: NX1899 = NX1872 + 27</p>
-<p style="padding-left: 60px;">2020.06: NX1926 = NX1899 + 27</p>
-<p style="padding-left: 60px;">2020.12: NX1953 = NX1926 + 27</p>
-<p style="padding-left: 60px;">2021.06: NX1980 = NX1953 + 27</p>
-<p style="padding-left: 60px;">2021.12: NX2007 = NX1980 + 27</p>
-<p style="padding-left: 60px;">2022.06: NX2034 = NX2007 + 27</p>
-<h4>讀取各學員每週工作內容:</h4>
-<p style="padding-left: 30px;">當完成分組後, 且各學員已經透過各自 Github 帳號下的 cd2022 倉儲開始執行課程任務後, 能否透過程式逐日或逐週讀取各學員的工作內容?</p>
-<h4>課程第一階段要求:</h4>
-<p style="padding-left: 30px;">每一個大組都要設法提供 solvespace, NX1980 格式的 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">uarm</a> (Onshape 格式) 機械手臂零組件.</p>
-<div id="disqus_thread"></div>
-<p>
-<script>
-/**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://https-mde-tw-eng.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-</p>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><br /> <a href='IPv6.html'>Next</a> >> IPv6</div>
+    <div id="tipue_search_content">Onshape << <a href='Onshape.html'>Previous</a> <a href='Tic-Tat-Toe.html'>Next</a> >> Tic-Tat-Toe<br /><h1>Copsim</h1>
+<p><a href="https://www.york.ac.uk/media/electronic-engineering/welcome/Simulation%20Challenge%20-%20Python%20Scripting.pdf">https://www.york.ac.uk/media/electronic-engineering/welcome/Simulation%20Challenge%20-%20Python%20Scripting.pdf</a></p>
+<p><a href="http://hades.mech.northwestern.edu/index.php/Getting_Started_with_the_CoppeliaSim_Simulator">http://hades.mech.northwestern.edu/index.php/Getting_Started_with_the_CoppeliaSim_Simulator</a> </p>
+<p><a href="https://www.doc.ic.ac.uk/~ajd/Robotics/RoboticsResources/questions1.pdf">https://www.doc.ic.ac.uk/~ajd/Robotics/RoboticsResources/questions1.pdf</a> </p>
+<p><a href="https://github.com/stepjam/PyRep">https://github.com/stepjam/PyRep</a> </p>
+<p><a href="https://www.diva-portal.org/smash/get/diva2:1569215/FULLTEXT02.pdf">https://www.diva-portal.org/smash/get/diva2:1569215/FULLTEXT02.pdf</a> </p><br />Onshape << <a href='Onshape.html'>Previous</a> <a href='Tic-Tat-Toe.html'>Next</a> >> Tic-Tat-Toe</div>
         
     <!-- footer -->
       <div class="container">
