--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -309,11 +309,44 @@ var winkVideoData2 = {
 <h2>w6 任務</h2>
 <p><a href="/downloads/w6_blog/2a_stage1.txt">2a_stage1.txt</a></p>
 <p><a href="/downloads/w6_blog/2a_stage2.txt">2a_stage2.txt</a></p>
-<p></p>
-<p></p><h1>Solvespace</h1>
+<p>以下影片說明如何利用 Leo Editor 編輯 config/pelican.leo 網誌檔案:</p>
+<script>
+var winkVideoData2 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
+<source src="/downloads/w6_blog/w6_blog.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><h2>w7 任務</h2>
+<p>為了讓各組設計中的 uArm 機械手臂能夠透過 Pick and Place 控制流程參與 <a href="https://mde.tw/cd2022_guide/content/Tic-Tat-Toe.html">Tic-Tat-Toe 遊戲</a>, 本週將進行下列實習任務:</p>
+<p>請利用隨身程式系統編譯 <a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a> 中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中 <a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a> 所進行的 <a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a>.</p>
+<h4 style="padding-left: 30px;">設法以隨身程式系統編譯此程式碼:</h4>
+<ol>
+<li>git clone <a href="https://github.com/mdecourse/scarysim.git">https://github.com/mdecourse/scarysim.git</a></li>
+<li>修改 scarysim.pro, 蓋掉第 11 行, 成為 # LIBS     += -lglut -lGLU</li>
+<li>cd scarysim</li>
+<li>qmake -o Makefile scarysim.pro</li>
+<li>mingw32-make -f Makefile.Release 可以在 release 目錄取得 scarysim.exe</li>
+<li>因為 scarysim.exe 執行需要 base.obj, arm1.obj, arm2.obj, arm3.obj 等零件外型檔案, 以及對應的 .mtl 材質檔案, 因此可將 scarysim.exe 移至倉儲根目錄執行.</li>
+<li>由於此套程式碼在 Target 模式下, 零組件間會造成干涉, 表示其 Inverse Kinematic 運算並不正確, 請設法修正此錯誤後, 修改其零件尺寸與操作控制方法, 設法模擬 MTB 的 <a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a> 範例.</li>
+</ol><h1>Solvespace</h1>
 <p>根據 <a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">https://mde.tw/cad2021/content/Compile%20Solvespace.html</a> 中的說明, 可以利用 <a href="https://drive.google.com/file/d/16L08jH3ZtoMeeGWBJrP9DuIk-cby_Wqw/view?usp=sharing">compile_copsim_for_cd2022.7z</a> (file size: 5 GB, extracted size: 17.3 GB), 完成編譯.</p>
-<p>自行編譯 Solvespace 的目的是希望透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 與 <a href="https://www.coppeliarobotics.com/helpFiles/en/importExport.htm">https://www.coppeliarobotics.com/helpFiles/en/importExport.htm</a> 的資訊, 自行在 Solvespace 中將組立檔案直接轉入 Coppeliasim 的場景檔案. 其中牽涉如何將 Solvespace 組立件中的零件檔案進行分割後, 以 <a href="https://en.wikipedia.org/wiki/STL">STL</a>、<a href="http://wiki.ros.org/urdf">URDF</a> 或 <a href="http://sdformat.org/">SDF</a> 格式直接轉入 Coppeliasim.</p>
-<h1>NX</h1>
+<p>自行編譯 Solvespace 的目的是希望透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 與 <a href="https://www.coppeliarobotics.com/helpFiles/en/importExport.htm">https://www.coppeliarobotics.com/helpFiles/en/importExport.htm</a> 的資訊, 自行在 Solvespace 中將組立檔案直接轉入 Coppeliasim 的場景檔案. 其中牽涉如何將 Solvespace 組立件中的零件檔案進行分割後, 以 <a href="https://en.wikipedia.org/wiki/STL">STL</a>、<a href="http://wiki.ros.org/urdf">URDF</a> 或 <a href="http://sdformat.org/">SDF</a> 格式直接轉入 Coppeliasim.</p><h1>NX</h1>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/">https://www.plm.automation.siemens.com/global/en/products/nx/</a> </p>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html">https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html</a> </p>
 <p><a href="https://en.wikipedia.org/wiki/Siemens_NX">https://en.wikipedia.org/wiki/Siemens_NX</a> </p><h2>NX12</h2>
@@ -631,7 +664,13 @@ var winkVideoData = {
 <p><a href="https://www.doc.ic.ac.uk/~ajd/Robotics/RoboticsResources/questions1.pdf">https://www.doc.ic.ac.uk/~ajd/Robotics/RoboticsResources/questions1.pdf</a></p>
 <p><a href="https://github.com/stepjam/PyRep">https://github.com/stepjam/PyRep</a></p>
 <p><a href="https://www.diva-portal.org/smash/get/diva2:1569215/FULLTEXT02.pdf">https://www.diva-portal.org/smash/get/diva2:1569215/FULLTEXT02.pdf</a></p>
-<p><a href="https://github.com/abr/abr_control">https://github.com/abr/abr_control</a> </p><h1>Tic-Tat-Toe</h1>
+<p><a href="https://github.com/abr/abr_control">https://github.com/abr/abr_control</a></p>
+<hr/>
+<p>利用 <a href="https://www.sympy.org">sympy</a> 根據 <a href="https://00873727922344666445.googlegroups.com/attach/286bbfb50ffde/MeArmPiTechnicalOverviewV0-1DRAFT.pdf?part=0.1&amp;view=1&amp;vt=ANaJVrGDe9LZ85pOQHyyD3YHg6RH_YMlaNxrwQbU1krMBmaDI6eM4g_K1qbkavpOFbSeHZMHSwN39Dn-VAQ9R8gXlPgNOu6lpwVM53o1SePKtQUe3UtGjEM">meArm Pi Technical Overview</a> 中的說明 (修正錯誤後), 解出 Inverse Kinematics 如下:</p>
+<p>當已知 manimpulator 端點的座標為 (x, y ,z) 時, 求 theta, ltheta (low arm link theta) 與 utheta (upper arm link theta). 利用 <a href="https://www.sympy.org">sympy</a> 之前必須先以 pip install sympy 安裝模組.</p>
+<p><a href="/downloads/ik/mearm_ik_sympy.py">mearm_ik_sympy.py</a></p>
+<p>使用者可以設法在 CoppeliaSim meArm 場景中驗證上述推導是否正確, 並與 <a href="https://github.com/yorkhackspace/meArm">https://github.com/yorkhackspace/meArm</a> 中的控制運算進行比較.</p>
+<p></p><h1>Tic-Tat-Toe</h1>
 <p><a href="https://techvidvan.com/tutorials/python-game-project-tic-tac-toe/">https://techvidvan.com/tutorials/python-game-project-tic-tac-toe/</a> </p>
 <p><a href="https://www.geeksforgeeks.org/tic-tac-toe-game-with-gui-using-tkinter-in-python/">https://www.geeksforgeeks.org/tic-tac-toe-game-with-gui-using-tkinter-in-python/</a> </p>
 <p><a href="https://www.universal-robots.com/products/ur10-robot/">UR10e</a> Robot 透過影像辨識與人進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-Toe</a> 遊戲:</p>
