--- a/content/w6 任務.html
+++ b/content/w6 任務.html
@@ -143,8 +143,10 @@ img.add_border {
 <p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/a79d474df5500b7487a352903b81989f9a0cd24f/w6_blog.py">2a w6 blog 查驗</a></p>
 <p style="padding-left: 30px;"><a href="./../downloads/w6_blog/2a_stage1.txt">2a_stage1.txt</a></p>
 <p style="padding-left: 30px;"><a href="./../downloads/w6_blog/2a_stage2.txt">2a_stage2.txt</a></p>
+<p style="padding-left: 30px;"><a href="./../downloads/w6_blog/2a_stage3.txt">2a_stage3.txt</a></p>
 <p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/c0e6d1f197434988c56451b2c25f7607c06a15d8/w6_blog_2b.py">2b w6 blog 查驗</a></p>
 <p style="padding-left: 30px;"><a href="./../downloads/w6_blog/2b_stage1.txt">2b_stage1.txt</a></p>
+<p style="padding-left: 30px;"><a href="./../downloads/w6_blog/2b_stage2.txt">2b_stage2.txt</a></p>
 <p>以下影片說明如何利用 Leo Editor 編輯 config/pelican.leo 網誌檔案:</p>
 <script>
 var winkVideoData2 = {
