--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -311,7 +311,7 @@ var winkVideoData2 = {
 <p style="padding-left: 30px;"><a href="/downloads/w6_blog/2a_stage1.txt">2a_stage1.txt</a></p>
 <p style="padding-left: 30px;"><a href="/downloads/w6_blog/2a_stage2.txt">2a_stage2.txt</a></p>
 <p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/c0e6d1f197434988c56451b2c25f7607c06a15d8/w6_blog_2b.py">2b w6 blog 查驗</a></p>
-<p style="padding-left: 30px;">2b_stage1.txt</p>
+<p style="padding-left: 30px;"><a href="/downloads/w6_blog/2b_stage1.txt">2b_stage1.txt</a></p>
 <p>以下影片說明如何利用 Leo Editor 編輯 config/pelican.leo 網誌檔案:</p>
 <script>
 var winkVideoData2 = {
