加入 2a w7 summary 查驗連結

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -377,6 +377,7 @@ var winkVideoData2 = {
 <p>@path mardown 表示隨後的 sub-outline 路徑都將位於 markdown 目錄之下.</p>
 <p>@edit myfile.md 表示存檔後, 將在此節點所對應的路徑下, 修改或新建 myfile.md 檔案.</p>
 <p>@clean myfile.md 表示存檔後, 將在此節點所對應的路徑下, 結合其子節點與上層 @others 所在位置的所有內容, 修改或新建 myfile.md 檔案.</p>
+<p>以下程式片段, 存於節點對應的內容區後, 按下 ctrl + b 可以執行.</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">'''Recursively import all python files in a directory and clean the result.'''
 
 c.recursiveImport(
