--- a/config/content.htm
+++ b/config/content.htm
@@ -382,7 +382,12 @@ var winkVideoData = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div><h3>w7_summary</h3>
 <p>請各大組在分組 blog 區域加入一個 Slug: w7_summary 的工作摘要說明, 將本週課堂上每位組員的工作內容與進度列在網誌中, 並以連結導引至各組員的個人網站中.</p>
-<p>如何集結各大組組員在各週所完成的工作進度?</p>
+<h4>請各大組在摘要網誌中回答下列問題:</h4>
+<ol>
+<li>如何集結各大組組員在各週所完成的工作進度?</li>
+<li>為何要在大組倉儲中建立 Reveal 投影片與 Pelican Blog? (<a href="https://gitbook.tw/chapters/using-git/git-blame">git blame 用法</a>)</li>
+<li>可以利用 Leo Editor 延續開發 <a href="https://github.com/mdecourse/scarysim">scarysim</a> 程式功能嗎? (與 <a href="https://github.com/microsoft/vscode">VScode</a> 比較, 或者直接在 VScode 中使用 Leo Editor, <a href="https://github.com/boltex/leointeg">leointeg</a>)</li>
+</ol>
 <p>假如在各大組倉儲的 downloads 目錄中針對每週的任務進行分類, 例如: 建立 downloads/w7 目錄, 讓各組組員利用 users/學號.leo 編寫個人有關的 blog 或其他相關資料的導入或引用, 如此, 就可以在上課階段 (stage1) 或次週上課前 (stage2), 以手動或程式方法集合各組員的 blog, reveal 或 cmsimde 內容, 經過人工查核後, 直接發布在各大組的網頁、網誌或簡報上.</p>
 <h4>協同重點:</h4>
 <ol>
@@ -408,6 +413,8 @@ c.recursiveImport(
     safe_at_file = False,
     theTypes =  ['.py']
 )</pre>
+<h4>Reference:</h4>
+<p style="padding-left: 30px;"><a href="https://leoeditor.com/tutorial.html">https://leoeditor.com/tutorial.html</a> </p>
 <p></p><h1>Solvespace</h1>
 <p>根據 <a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">https://mde.tw/cad2021/content/Compile%20Solvespace.html</a> 中的說明, 可以利用 <a href="https://drive.google.com/file/d/16L08jH3ZtoMeeGWBJrP9DuIk-cby_Wqw/view?usp=sharing">compile_copsim_for_cd2022.7z</a> (file size: 5 GB, extracted size: 17.3 GB), 完成編譯.</p>
 <p>自行編譯 Solvespace 的目的是希望透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 與 <a href="https://www.coppeliarobotics.com/helpFiles/en/importExport.htm">https://www.coppeliarobotics.com/helpFiles/en/importExport.htm</a> 的資訊, 自行在 Solvespace 中將組立檔案直接轉入 Coppeliasim 的場景檔案. 其中牽涉如何將 Solvespace 組立件中的零件檔案進行分割後, 以 <a href="https://en.wikipedia.org/wiki/STL">STL</a>、<a href="http://wiki.ros.org/urdf">URDF</a> 或 <a href="http://sdformat.org/">SDF</a> 格式直接轉入 Coppeliasim.</p><h1>NX</h1>
