--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -365,15 +365,6 @@ var winkVideoData = {
   buttonFrameLength: 5,
   buttonFrameOffset: 2,
   frameStops: {
-    "2": [
-      { type: "gotourl", rect: { x: 127, y: 172, width: 60, height: 24 }, target: "https://www.msys2.org/", window: "MSYS2" },
-    ],
-    "30": [
-      { type: "gotourl", rect: { x: 618, y: 366, width: 60, height: 24 }, target: "https://www.msys2.org/", window: "MSYS2" },
-    ],
-    "43": [
-      { type: "gotourl", rect: { x: 729, y: 328, width: 60, height: 24 }, target: "https://www.msys2.org/", window: "MSYS2" },
-    ],
   },
 };
 </script>
@@ -392,6 +383,7 @@ var winkVideoData = {
 </div><h3>w7_summary</h3>
 <p>請各大組在分組 blog 區域加入一個 Slug: w7_summary 的工作摘要說明, 將本週課堂上每位組員的工作內容與進度列在網誌中, 並以連結導引至各組員的個人網站中.</p>
 <p>如何集結各大組組員在各週所完成的工作進度?</p>
+<p>為何要在大組倉儲中建立 Reveal 投影片與 Pelican Blog? (<a href="https://gitbook.tw/chapters/using-git/git-blame">git blame 用法</a>)</p>
 <p>假如在各大組倉儲的 downloads 目錄中針對每週的任務進行分類, 例如: 建立 downloads/w7 目錄, 讓各組組員利用 users/學號.leo 編寫個人有關的 blog 或其他相關資料的導入或引用, 如此, 就可以在上課階段 (stage1) 或次週上課前 (stage2), 以手動或程式方法集合各組員的 blog, reveal 或 cmsimde 內容, 經過人工查核後, 直接發布在各大組的網頁、網誌或簡報上.</p>
 <h4>協同重點:</h4>
 <ol>
